pushed version 3.0.5